test/parse/expr/bad-block-mismatch-label.txt
;;; ERROR: 1
(module
  (func
    block $foo
    end $bar))
(;; STDERR ;;;
out/test/parse/expr/bad-block-mismatch-label.txt:5:9: error: mismatching label "$foo" != "$bar"
    end $bar))
        ^^^^
;;; STDERR ;;)
